1999-12-03  Kenichi Handa  <handa@mule.m17n.org>

	* international/mule-util.el (truncate-string-to-width): Docsting
	fixed.

1999-12-02  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/lisp-mnt.el (lm-header-multiline): Fix spurious
	use of `cond'.
	(lm-with-file): Move all the find-file...kill-buffer stuff into
	this macro.  Make it use `find-file-noselect' and make it kill
	the buffer only if it wasn't already displayed somewhere.
	(lm-summary, lm-authors, lm-maintainer, lm-creation-date)
	(lm-last-modified-date, lm-version, lm-keywords, lm-adapted-by)
	(lm-commentary, lm-verify, lm-synopsis): Use lm-with-file.
	(lm-commentary): fix to handle the case when the change log is
	at the end of the file.

1999-12-02  Kenichi Handa  <handa@etl.go.jp>

	* international/mule.el (charsetp): Fix typo in docstring.

	* international/mule-diag.el (list-coding-categories): Fix typo;
	automatic -> autoload.

1999-12-02  Gerd Moellmann  <gerd@gnu.org>

	* vc.el (vc-update-change-log): Look for rcs2log under
	exec-directory.

	* emacs-lisp/lisp-mode.el (lisp-mode-variables): Change
	outline-regexp, add outline-level.
	(lisp-outline-level): New.

	* calendar/appt.el (appt-convert-time): Handle "12:MMam", 
	remove extraneous string-match.

	* finder.el (finder-commentary): Activate Finder mode.

1999-12-01  Anders Lindgren  <andersl@andersl.com>

	* autorevert.el (auto-revert-buffers): Auto-revert mode was turned
	off when reverting buffers that contained mode specifiers.
	`revert-buffer' is now called with non-nil PRESERVE-MODES
	argument.

1999-12-01  Dave Love  <fx@gnu.org>

	* delsel.el: Grok skeleton-pair-insert-maybe.

1999-11-30  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* progmodes/cperl-mode.el (cperl-under-as-char):
	Use nil as default.

1999-11-30  Gerd Moellmann  <gerd@gnu.org>

	* speedbar.el (toplevel): Remove compatibility code for Emacs
	versions without custom.el.

1999-11-30  Dave Love  <fx@gnu.org>
